# cmsc606

./: .gitignore  README.md  main.py  pyproject.toml
cmsc606.egg-info/: PKG-INFO  SOURCES.txt
data/: carSUV_normalized.csv
src/cmsc606/hw/hw1/: _config.py  dotting.py
src/cmsc606/hw/hw2/: hw2_impl.py  hw2_stub.py
src/cmsc606/hw/hw3/: hw3_impl.py
testing/: hw1.ipynb  hw2.ipynb  hw3.ipynb
