[project]
name = "cmsc606"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.6",
    "notebook>=7.4.5",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "pandas-stubs==2.3.2.250827",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
]

[tool.uv]
package = true
native-tls = true
